Add PENDING enrollment status for SIS enrollments
The PENDING enrollment status is used for courses with enrollment
questionnaires, when students are enrolled from SIS. PENDING students
cannot start the course tasks before completing the enrollment
questionnaire.

Use the PENDING status also for non-SIS courses when the student
opens the enrollment questionnaire. If they do not submit
the questionnaire successfully, the PENDING enrollment will stay
in A+.

PENDING enrollment may be activated manually to the ACTIVE status
(in the `enroll_student` function).

Fixes #981.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -341,6 +341,10 @@ msgid "BANNED"
 msgstr "Banned"
 
 #: course/models.py
+msgid "PENDING"
+msgstr "Pending"
+
+#: course/models.py
 msgid "LABEL_USER_PROFILE"
 msgstr "user"
 
@@ -1334,11 +1338,11 @@ msgstr "Filter users by status"
 
 #: course/templates/course/staff/participants.html
 msgid "NUMBER_OF_ENROLLED_STUDENTS"
-msgstr "Number of enrolled students"
+msgstr "Number of active students"
 
 #: course/templates/course/staff/participants.html
 msgid "REMOVED_STUDENTS"
-msgstr "removed students"
+msgstr "inactive students"
 
 #: course/templates/course/staff/participants.html
 msgid "OF_WHICH_SELECTED"
