WIP Approve late/unofficial submissions when adding deviations
TODO:
* +1 max submissions deviation button in the inspect submission view:
  should this also check if any submission should be approved
  immediately?
* test all the changes
* deviations/viewbase.py approve_unofficial_submissions():
  implementation unfinished
* clean up the code
* success messages to the user in the user interface?

When deviations are added, the teacher may choose to also immediately
approve such existing submissions that are covered by the deviation.
For example, if the submission was late, but with the new personal
deadline it is not late, then it would be approved.

Fixes #892.
"The second pull request" in the comment:
https://github.com/apluslms/a-plus/issues/892#issuecomment-1048656166

This work started in Muhammad's pull request #991. Markku has
refactored the code, improved the database queries and the details
overall.

Co-authored-by: Muhammad Wahjoe <faiz00.muhammad@gmail.com>

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1487,6 +1487,12 @@ msgid "LABEL_WITHOUT_LATE_PENALTY"
 msgstr "Do not apply late penalty during extra time."
 
 #: deviations/forms.py
+msgid "LABEL_APPROVE_LATE_SUBMISSIONS"
+msgstr ""
+"Approve existing late and/or unofficial submissions that are covered by the "
+"new personal deadline."
+
+#: deviations/forms.py
 msgid "DEVIATION_MODULE_ADD_HELPTEXT"
 msgstr ""
 "List a module or modules here if you wish the deviation to be applied to all "
@@ -1520,6 +1526,12 @@ msgstr "You have to provide either the extra time or a date in the future."
 #: deviations/forms.py deviations/models.py
 msgid "LABEL_EXTRA_SUBMISSIONS"
 msgstr "Extra submissions"
+
+#: deviations/forms.py
+msgid "LABEL_APPROVE_UNOFFICIAL_SUBMISSIONS"
+msgstr ""
+"Approve existing unofficial submissions that are covered by the new personal "
+"submission attempt limit."
 
 #: deviations/forms.py
 msgid "DEVIATION_MODULE_REMOVE_HELPTEXT"
